--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.elc
+emacs.d/site-lisp/emacs-jabber/autom4te.cache
+emacs.d/site-lisp/emacs-jabber/build-aux
+emacs.d/site-lisp/emacs-jabber/configure.lineno
