make my-parameters untracked

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.elc
 *.log
 *.status
-emacs.d/site-lisp/emacs-jabber/autom4te.cache
-emacs.d/site-lisp/emacs-jabber/build-aux
-emacs.d/site-lisp/emacs-jabber/configure.lineno
+site-lisp/emacs-jabber/autom4te.cache
+site-lisp/emacs-jabber/build-aux
+site-lisp/emacs-jabber/configure.lineno
+my-parameters.el
