--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "site-lisp/pi-php-mode"]
 	path = site-lisp/pi-php-mode
 	url = https://github.com/pivaldi/pi-php-mode.git
+[submodule "site-lisp/git-submodule/go-mode"]
+	path = site-lisp/git-submodule/go-mode
+	url = git@github.com:pivaldi/yasnippet-go.git
