Fix web-beautify gitref

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 	url = https://github.com/dbrock/bongo.git
 [submodule "site-lisp/web-beautify"]
 	path = site-lisp/web-beautify
-	url = https://github.com/yasuyk/web-beautify.git
+	url = https://github.com/OVYA/web-beautify.git
 [submodule "site-lisp/php-cs-fixer"]
 	path = site-lisp/php-cs-fixer
 	url = git@github.com:OVYA/php-cs-fixer.git
